--- a/src/templates/core/OpenAPI.hbs
+++ b/src/templates/core/OpenAPI.hbs
@@ -24,8 +24,8 @@ type Config = {
     BASE: string;
     VERSION: string;
     WITH_CREDENTIALS: boolean;
-    REQUEST_HOOK?(params: RequestHookParams): Promise<RequestHookParams>;
-    RESPONSE_HOOK?(result: ResponseHookParams): Promise<ApiResult>
+    REQUEST_HOOK?: (params: RequestHookParams) => Promise<RequestHookParams>;
+    RESPONSE_HOOK?: (result: ResponseHookParams) => Promise<ApiResult>;
     TOKEN?: string | Resolver<string>;
     USERNAME?: string | Resolver<string>;
     PASSWORD?: string | Resolver<string>;
